# courses

./: .gitignore  README.md
Rust/: .gitignore  Cargo.toml
Rust/Ultimate-Rust-Crash-Course/: Cargo.toml  Notes.txt
Rust/Ultimate-Rust-Crash-Course/test_code/: Cargo.toml
Rust/Ultimate_Rust_2/: Cargo.toml
Rust/Ultimate_Rust_2/project/: Cargo.toml
Rust/cat/: Cargo.toml  my_video-1.mkv  test.txt
Rust/cat/src/: main.rs
Rust/questionaire_code/src/: main.rs
Rust/road_race/: Cargo.toml
Rust/road_race/src/: main.rs
Rust/rust_game/: Cargo.toml
Rust/rust_game/src/: main.rs
python/100-days-of-code/: main.py  test.py
python/100-days-of-code/Blackjack/: main.py
python/100-days-of-code/GIA-tests/: number-speed-accuracy.py  perceptual-speed.py  reasoning.py
python/100-days-of-code/blackjack/: main.py
python/100-days-of-code/caesar-cypher/: main.py
python/100-days-of-code/caesar-cypher-extended/: main.py
python/100-days-of-code/day_16/: pretty_table.py  turtle_graphics.py
python/100-days-of-code/encryption-6-digit-code/: main.py
python/100-days-of-code/hangman/: hangman_art.py  hangman_words.py  main.py
python/100-days-of-code/password-generator/: password-generator.py
python/100-days-of-code/prime-number-checker/: main.py
python/100-days-of-code/quiz_game/: main.py  question_model.py  quiz.py  quiz_brain.py  setup.py
python/100-days-of-code/rock-paper-scissors/: rock-paper-scissors.py
python/AlgoExpert/: array_counter.py  reverse_words_in_string.py  river_sizes.py  river_sizes_dict.py  smallest_difference.py
(+65 files in other folders)
